--- a/vignettes/PhONA.Rmd
+++ b/vignettes/PhONA.Rmd
@@ -20,11 +20,13 @@ vignette: >
 PhONA provides a framework to select a testable and manageable number of OTUs to support microbiome-based agriculture.
 
 ```{r}
-# Installation of package
-
+# installation 
 # library(devtools)
 # devtools::install_github("ravinpoudel/PhONA", build_vignettes = TRUE, force = TRUE, auth = "5c5decd148f0378dcb762e7b14c3d1508ef49ba2")
 
+# Browse Vignettes to see the output as below. 
+
+# browseVignettes("PhONA")
 ```
 
 ```{r setup, include = FALSE}
