--- a/vignettes/PhONA.Rmd
+++ b/vignettes/PhONA.Rmd
@@ -8,13 +8,15 @@ fig_caption: yes
 #output: beamer_presentation
 output: tufte::tufte_html
 #output:
-# rmarkdown::html_document:
-#    theme: lumen
+#rmarkdown::html_document:
+#theme: lumen
 vignette: >
   %\VignetteIndexEntry{PhONA}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
+
 #### Introduction
 
 PhONA provides a framework to select a testable and manageable number of OTUs to support microbiome-based agriculture.
@@ -28,6 +30,7 @@ PhONA provides a framework to select a testable and manageable number of OTUs to
 
 # browseVignettes("PhONA")
 ```
+
 
 ```{r setup, include = FALSE}
 library(tufte)
@@ -43,7 +46,6 @@ sparcc.pval <- read.delim(system.file("extdata", "pvals.txt", package = "PhONA")
 ```
 
 
-
 ```{r,out.width = "400px"}
 library(PhONA)
 PhONA(
@@ -51,6 +53,7 @@ PhONA(
   cordata = sparcc.cor,
   pdata = sparcc.pval,
   model = "lm",
+  iters=1,
   OTU_OTU_pvalue = 0.001,
   OTU_OTU_rvalue = 0.6,
   OTU_Phenotype_pvalue = 0.6,
@@ -75,6 +78,7 @@ PhONA(
   cordata = sparcc.cor,
   pdata = sparcc.pval,
   model = "lasso",
+  iters=2,
   OTU_OTU_pvalue = 0.001,
   OTU_OTU_rvalue = 0.6,
   OTU_Phenotype_pvalue = 0.6,
